# biomed-multi-omic

./: .gitignore  OT_TRAINING.md  README.md  README_dna.md  pyproject.toml
.claude/skills/bmfm-targets-run/: SKILL.md
.github/workflows/: dna_test-cli.yml  python-package.yml  test-cli.yml  test-inference-cli.yml
bmfm_targets/: README.md  README_dna.md  __init__.py  inference.py
bmfm_targets/config/: __init__.py  main_config.py  model_config.py  tokenization_config.py  training_config.py
bmfm_targets/datasets/: __init__.py  base_dna_dataset.py  base_perturbation_dataset.py  base_rna_dataset.py  base_scrna2chip_dataset.py  dataset_transformer.py  datasets_utils.py  paired_view_collator.py  samplers.py
bmfm_targets/datasets/SNPdb/: streaming_snp_dataset.py
bmfm_targets/datasets/anncollection/: anncollection_dataset_index.ipynb  anncollection_dataset_index_w_lbl.ipynb
bmfm_targets/datasets/label_ontology/: ontology.py
bmfm_targets/datasets/perturbation/: __init__.py  perturbation_data_module.py
bmfm_targets/datasets/perturbx/: README.md
bmfm_targets/datasets/scRNA2ChIP/: __init__.py  base_scrna2chip_dataset.py  scrna2chip_data_module.py
bmfm_targets/datasets/scp1884/: SCP1884_all_labels.json  __init__.py  scp1884_datamodule.py  scp1884_dataset.py  scp1884_util.py
bmfm_targets/evaluation/: baselines.py  embeddings.py  interpret.py
bmfm_targets/evaluation/benchmark_configs/: README.md  benchmark_run.sh  config.yaml
bmfm_targets/evaluation/benchmark_configs_dna/: README.md  benchmark_ccc_wolora_snpify_tewhey.sh  benchmark_zuvela_wolora_multipleckpt_refsnp.sh  benchmark_zuvela_wolora_snpify_hic.sh  benchmark_zuvela_wolora_snpify_no_chk.sh  benchmark_zuvela_wolora_snpify_ref.sh  benchmark_zuvela_wolora_snpify_refsnp.sh  config.yaml
bmfm_targets/models/: __init__.py  model_utils.py
bmfm_targets/models/common/: init_utils.py
bmfm_targets/models/predictive/: _compat_utils.py  attentions.py  layers.py  multitask.py
bmfm_targets/tasks/: task_utils.py
bmfm_targets/tasks/scbert/: scbert_interpret_zheng68k.yaml  scbert_main.py  scbert_predict_zheng68k.yaml  scbert_test_zheng68k.yaml  scbert_train_panglaodb.yaml  scbert_train_panglaodb_dynamic_bins.yaml  scbert_train_perturbation_ft.yaml  scbert_train_zheng68k.yaml  scbert_train_zheng68k_mlm.yaml  scbert_train_zheng68k_wced.yaml  scbert_train_zheng68k_wced_scheduled_dynamic_training.yaml
bmfm_targets/tests/: README.md  conftest.py  helpers.py  test_adaptive_masking.py  test_attention.py  test_base_dataset.py  test_batch_integration.py  test_batch_prediction_metrics.py  test_callbacks.py  test_checkpoint_migration.py  test_chip_collator.py  test_configuration_scbert.py  test_contrastive_loss.py  test_czi_benchmarks.py  test_datasets_utils.py  test_dnaseqdm_seq_cls_training.py  test_imports.py  test_inference_api.py  test_inference_tasks.py  test_interpret.py  test_label_ontology.py  test_layers.py  test_lora_config.py  test_lora_layers_config.py  test_loss_config_instantiation.py  test_loss_tasks.py  test_main_config.py  test_masking.py  test_metrics.py  test_model_mlm_training.py  test_model_multitask_training.py  test_model_seq_cls_training.py  test_model_training.py  test_models.py  test_modular_tokenizer.py  test_multifield_collator.py  test_multifield_instance.py  test_multifield_tokenizer.py  test_multitask_model.py  test_perturbation_metrics_generic.py  (+10 more)
bmfm_targets/tests/test_vocab/: pre_computed_gene_embeddings_full.txt
bmfm_targets/tokenization/: load.py  multifield_collator.py  multifield_tokenizer.py
bmfm_targets/tokenization/create/: create_gene2vec_tokenizer.py  (+1 more)
bmfm_targets/training/: callbacks.py  data_module.py  sample_transforms.py  streaming_datamodule.py
bmfm_targets/transforms/: protein_coding_gene_mapping_uppercase_hgnc_2024_08_23.json  sc_transforms.py
docs/: scconcept_results.md
run/: README.md  __init__.py  dna_finetune_train_and_test_config.yaml  dna_predict.yaml  dna_predict_topIBD_DeLange.yaml  dnaeval_default.yaml  evaluate_representations.py  extract_embeddings.py  finetune.yaml  migrate_checkpoints_to_multitask.py  predict.yaml  prediction_train_and_test_config.yaml  rda_mlm.yaml  scconcept_pretrain.yaml  scrna2chip_ot_hello_world.py  scrna2chip_ot_train.yaml  scrna2chip_ot_train_small_model.yaml  scrna2chip_ot_wced_train.yaml  scrna2chip_ot_wced_train_small_model.yaml  scrna2chip_predict.yaml  scrna2chip_test_config_wced.yaml  scrna2chip_train_config_wced.yaml  scrna2chip_train_config_wced_small_model.yaml  test_ot_convergence.py  train_ot_toy.py
run/checkpoints/: biomed.rna.bert.110m.mlm.multitask.v1.yaml  biomed.rna.bert.110m.mlm.rda.v1.yaml  biomed.rna.bert.110m.wced.multitask.v1.yaml  biomed.rna.bert.110m.wced.v1.yaml  biomed.rna.llama.32m.mlm.multitask.v1.yaml  biomed.rna.llama.47m.wced.multitask.v1.yaml
run/data_module/: base_language_modeling.yaml  base_multi_task.yaml  base_seq_cls.yaml  base_seq_labeling.yaml  dna_base_seq_cls.yaml  dnaeval_default.yaml  scrna2chip.yaml
run/fields/: scrna2chip_wced.yaml
run/model/: llama.yaml
run/task/: predict.yaml  train_and_predict.yaml  train_and_test.yaml
run/trainer/: scrna2chip.yaml
tutorials/DNA/: 1_zero_shot_using_yaml_inspection.ipynb  2_inference_inspection.ipynb  2_inference_inspection_promoter.ipynb  analyze_snps_on_outcome.ipynb  cagi_IBMsnpBERT.ipynb
tutorials/RNA/: 1_zero_shot_using_yaml.ipynb
vllm/: README.md  agents.md  pyproject.toml
vllm/biomed_rna_plugin/: __init__.py  biomed_rna.py  io_processor.py  preprocess.py  utils.py
vllm/docs/: io_processor_comparison.md
vllm/examples/: biomed_rna_example.py  offline_biomed_rna_example.py  online_biomed_rna_example.py
vllm/scripts/: benchmark_inference.py  convert_and_upload_to_hf.py  convert_ckpt_to_safe_tensors.py  create_vllm_compatible_hf_model_repo.py  inspect_model_weights.py
vllm/tests/: __init__.py  conftest.py  test_biomed_rna.py  test_io_processor.py  test_plugin_integration.py  test_preprocess.py  test_regression.py
vllm/vllm_biomed_rna_plugin/: __init__.py  biomed_rna.py  constants.py  io_processor.py  preprocess.py  utils.py
(+118 files in other folders)
