[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-ibm-biomed-rna-plugin"
version = "0.1.0"
description = "IBM biomed-rna model plugin for vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sivan Ravid", email = "sivanra@il.ibm.com"}
]
keywords = ["vllm", "biomed-rna", "scRNA", "inference", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "vllm>0.18.0",
    "torch>=2.9.0",
    "transformers>=4.56.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.950",
]

#[project.urls]
#Homepage = ""
#Repository = ""

# vLLM plugin for biomed-rna model
[project.entry-points."vllm.general_plugins"]
biomed_rna_model = "vllm_biomed_rna_plugin:register_biomed_rna_model"

# IO processor plugin for custom /pooling endpoint
[project.entry-points."vllm.io_processor_plugins"]
biomed_rna = "vllm_biomed_rna_plugin.io_processor:register_biomed_rna_plugin"

[tool.setuptools]
packages = ["vllm_biomed_rna_plugin"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]
line-length = 88

# Match parent project configuration
select = [
  "UP",   # pyupgrade
  "D",    # pydocstyle
  "PT",   # pytest style checking
  "C4",   # comprehensions style checking
  "F",    # pyflakes
  "W605", # pycodestyle: invalid-escape-sequence
  "I",    # isort
]

ignore = [
  "D100",  # pydocstyle: Missing module docstring
  "D101",  # pydocstyle: Missing module-level docstring
  "D102",  # pydocstyle: Missing docstring in public module
  "D103",  # pydocstyle: Missing class docstring
  "D105",  # pydocstyle: Missing docstring in magic method
  "D107",  # pydocstyle: Missing parameter descriptions in the docstring
  "D203",  # pydocstyle: 1 blank line required before class docstring
  "D205",  # pydocstyle: 1 blank line required between summary line and description
  "D212",  # pydocstyle: Multi-line docstring summary should start at the first line
  "D401",  # pydocstyle: First line should be in imperative mood
  "D417",  # pydocstyle: Missing argument descriptions in the docstring
  "F841",  # flake8: unused variable
  "PT011", # pytest: pytest-raises-too-broad
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I001"]
